k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neatpush-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neatpush-worker
  template:
    metadata:
      labels:
        app: neatpush-worker
    spec:
      containers:
        - name: neatpush
          image: guigze/neatpush:latest
          imagePullPolicy: Always
          command: ["neatpush", "worker", "--no-watch"]
          livenessProbe:
            timeoutSeconds: 10
            periodSeconds: 30
            exec:
              command: ["neatpush", "ping"]
          readinessProbe:
            timeoutSeconds: 10
            periodSeconds: 30
            exec:
              command: ["neatpush", "ping"]
