k8s/edgedb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neatpush-edgedb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neatpush-edgedb
  template:
    metadata:
      labels:
        app: neatpush-edgedb
    spec:
      volumes:
        - name: neatpush-pv-psql
          persistentVolumeClaim:
            claimName: neatpush-pv-psql
      containers:
        - name: neatpush
          image: edgedb/edgedb:2.2
          ports:
            - name: tcp
              containerPort: 5656
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/edgedb
              name: neatpush-pv-psql
---
apiVersion: v1
kind: Service
metadata:
  name: neatpush-edgedb # *.neatpush-edgedb.default.svc.cluster.local
  labels:
    app: neatpush-edgedb
spec:
  ports:
    - port: 5656
      name: neatpush-edgedb
  selector:
    app: neatpush-edgedb

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neatpush-edgedb-ui
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: neatpush-edgedb.renewex.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neatpush-edgedb
                port:
                  number: 5656
